--- a/Mark_IV/Sintering/.env
+++ b/Mark_IV/Sintering/.env
@@ -29,13 +29,13 @@ LINEAR_in2 = 8
 LINEAR_en = 23
 
 # GPS
-useGPS = 'False'
+useGPS = 'True'
 
 # Pause at end of shape layer
 pause = 'True'
 
 # Stop when below min uv value
-uvMin = 6.8
+uvMin = 6.9
 
 # Azimuth steps
 AZIMUTH_Steps = 100
