Initial elevation changed, updates to cv_tracking

--- a/Mark_IV/Sintering/.env
+++ b/Mark_IV/Sintering/.env
@@ -34,8 +34,5 @@ useGPS = 'False'
 # Pause at end of shape layer
 pause = 'True'
 
-# Stop when below min uv value
-uvMin = 6.9
-
-# Azimuth steps
-AZIMUTH_Steps = 100
+# Stop when below min pixel brightness value
+pixMin = 248
